# dbt-parse

./: .gitignore  README.md  run.sh
assets/: sample_data.csv
db/: sample.duckdb
src/: create_sample_db.py  examine_duckdb.py  globals.py  pyproject.toml  see_lex_results.py
src/dbt/: dbt_project.yml
src/dbt/macros/: lex.sql
src/dbt/models/example/: dbt_test.sql  schema.yml
